make stylings consistent for all components. fix issue where background colour not covering whole page 120vh

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
   grid-template-rows: 0.5fr 0.25fr 8fr;
   grid-template-columns: 1fr;
   grid-template-areas: 'App-header' 'Navbar' 'Content';
-  /* height: 100vh; */
   background-color: #171f2d;
+  min-height: 120vh;
 }
 
 .App-header {
@@ -29,6 +29,8 @@
 .Content {
   color: #f0f1f3;
   grid-area: Content;
+  font-size: 60%;
+  margin: 10px;
 }
 
 .login {
@@ -45,7 +47,7 @@
 
 @media only screen and (min-width: 450px) {
   .App {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 0.5fr 3fr;
     grid-template-rows: 0.5fr 4fr;
     grid-template-areas: 'App-header App-header' 'Navbar Content';
   }
@@ -64,4 +66,9 @@
 .votesButtons {
   display: flex;
   justify-content: center;
+}
+
+.Content {
+  font-size: large;
+  margin: 1px;
 }
