--- a/src/css/articles.css
+++ b/src/css/articles.css
@@ -14,6 +14,7 @@
   align-items: center;
   border-radius: 20px;
   background-color: #f0f1f3;
+  font-size: 70%;
 }
 
 .articleCard:hover {
@@ -42,7 +43,7 @@
 .artAuthor {
   grid-column-start: 1;
   grid-row-start: 2;
-  font-size: small;
+  font-size: 70%;
 }
 
 .artBody {
@@ -65,4 +66,13 @@
   /* width: 50px; */
   grid-row-start: 2;
   font-size: smaller;
+}
+
+@media only screen and (min-width: 450px) {
+  .articleCard {
+    font-size: inherit;
+  }
+  .artAuthor {
+    font-size: small;
+  }
 }
